# ML-Voice

./: .gitignore  LICENSE-MIT  README.md  audiowave.py  pyproject.toml  recording_example.py
lib/: LICENSE
