[tool.poetry]
name = "ml_voice"
version = "0.1.0"
description = ""
authors = ["Mokuichi147 <38586357+Mokuichi147@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
llvmlite = "^0.37.0"
librosa = "^0.8.1"
PyWavelets = "^1.2.0"
simpleaudio = "^1.0.4"
matplotlib = "^3.5.1"
Pillow = "^9.0.0"
PyAudio = [
    { platform = "linux || darwin", version = "^0.2.11"},
    { python = ">=3.7,<3.8", platform = "win32", file = "lib/PyAudio-0.2.11-cp37-cp37m-win_amd64.whl" },
    { python = ">=3.8,<3.9", platform = "win32", file = "lib/PyAudio-0.2.11-cp38-cp38-win_amd64.whl" },
    { python = ">=3.9,<3.10", platform = "win32", file = "lib/PyAudio-0.2.11-cp39-cp39-win_amd64.whl" }
]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
